<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_title" />

                <Button
                    android:id="@+id/start_service_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="startServiceClick"
                    android:text="@string/start_service" />

                <Button
                    android:id="@+id/stop_service_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="stopServiceClick"
                    android:text="@string/stop_service" />

                <TextView
                    android:id="@+id/service_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="something written here" />

                <Button
                    android:id="@+id/start_discovering_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="startDiscoveryClick"
                    android:text="@string/start_discovering" />

                <Button
                    android:id="@+id/stop_discovering_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="stopDiscoveryClick"
                    android:text="@string/stop_discovering" />

                <Button
                    android:id="@+id/send_message_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="sendMessageClick"
                    android:text="@string/send_message" />

                <TextView
                    android:id="@+id/discovering_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="something written here" />

                <Button
                    android:id="@+id/close_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="closeClick"
                    android:text="@string/close" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>